# craycli

./: .coveragerc  .gitignore  .license_check.yaml  .pylintrc  .version  Developing.md  Dockerfile  Integration.md  Jenkinsfile  Jenkinsfile.github  Jenkinsfile.sles15_ncn  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  Tutorial.md  craycli-podman.sh  craycli.spec  demo.md  entry_points.ini  init.json  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  runBuildPrep.sh  runPostBuild.sh  runPostDockerBuild.sh  runPostPublish.sh  setup.cfg  setup.py  smokeTests.sh  version
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  promote-release.yml  tests.yml
cray/: __init__.py  atp.py  auth.py  cli.py  config.py  constants.py  core.py  echo.py  errors.py  exceptions.py  formatting.py  generator.py  hostlist.py  mpir.py  nesteddict.py  options.py  pals.py  rest.py  swagger.py  utils.py
cray/modules/aprun/: cli.py
cray/modules/ars/: .remote  cli.py  swagger3.json
cray/modules/artifacts/: cli.py
cray/modules/badger/: .remote  cli.py  swagger3.json
cray/modules/bos/: cli.py  openapi.yaml  swagger3.json
cray/modules/bss/: .remote  cli.py  swagger.yaml  swagger3.json
cray/modules/capmc/: .remote  cli.py  swagger.yaml  swagger3.json
cray/modules/cfs/: .remote  cli.py  openapi.yaml  swagger3.json
cray/modules/config/: cli.py
cray/modules/console/: cli.py
cray/modules/cps/: cli.py  openapi.yaml  swagger3.json
cray/modules/crus/: .remote  cli.py  swagger3.json
cray/modules/fabric/: .gitignore  .remote  Readme.md  cli.py  swagger.yaml  swagger3.json
cray/modules/fas/: cli.py  swagger.yaml  swagger3.json
cray/modules/fc/: .remote  cli.py  swagger3.json
cray/modules/hsm/: .remote  cli.py  swagger_v2.yaml
cray/modules/ims/: .remote  __init__.py  cli.py  openapi.yaml  swagger.yaml  swagger3.json
cray/modules/mpiexec/: cli.py
cray/modules/network/: cli.py  swagger.json
cray/modules/nmd/: cli.py  openapi.yaml  swagger3.json
cray/modules/pals/: .remote  cli.py  swagger3.json
cray/modules/power/: README.md  cli.py  swagger.yaml  swagger3.json
cray/modules/rr/: cli.py
cray/modules/rrs/: __init__.py  cli.py  swagger.yaml  swagger3.json  swagger3.json.old
cray/modules/scsd/: .remote  cli.py  swagger.yaml  swagger3.json
cray/modules/sls/: .remote  cli.py  swagger.yaml  swagger3.json
cray/modules/uas/: .remote  cli.py  swagger.yaml  swagger3.json
cray/modules/vnid/: cli.py  swagger.yaml  swagger3.json
cray/tests/: conftest.py  utils.py
cray/tests/files/: swagger.json  swagger3.json  template.txt  test.txt  token
cray/tests/test_functional/: test_auth.py  test_cli.py  test_init.py  test_rest.py
cray/tests/test_modules/: conftest.py  test_aprun.py  test_ars.py  test_artifacts.py  test_badger.py  test_bos.py  test_bos_components.py  test_bos_sessions.py  test_bos_sessiontemplates.py  test_bss.py  (+18 more)
docs/: Makefile
docs/source/: conf.py  create_sub_commands.py  index.rst
tests/: __init__.py
tests/files/: swagger.json  swagger3.json  template.txt  test_private_key  test_public_key  token
tests/test_functional/: test_auth.py  test_cli.py  test_init.py  test_network.py  test_rest.py
tests/test_modules/: test_aprun.py  test_ars.py  test_artifacts.py  test_badger.py  test_bos.py  test_bss.py  test_capmc.py  test_cfs.py  test_config.py  test_cps.py  test_crus.py  test_fabric.py  test_fas.py  test_fc.py  test_hsm.py  test_ims.py  test_mpiexec.py  test_nmd.py  test_pals.py  test_power.py  test_scsd.py  test_sls.py  test_uas.py  test_vnid.py
tests/test_unit/: test_aprun.py  test_auth.py  test_echo.py  test_errors.py  test_formatting.py  test_generator.py  test_hostlist.py  test_make_url.py  test_mpiexec.py  test_pals.py  test_utils.py
tests/utils/: pets.py  rest.py  runner.py  utils.py
utils/: Dockerfile  convert.sh  craycli-devenv.Dockerfile  devenv.sh  swagger2openapi.Dockerfile
(+36 files in other folders)
