#
# MIT License
#
# (C) Copyright 2023 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the 'Software'),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#
[project]
name = 'cray'
authors = [
    { name = 'David Gloe', email = 'david.gloe@hpe.com' },
    { name = 'Eric Cozzi', email = 'eric.cozzi@hpe.com' },
    { name = 'Eric Lund', email = 'eric.lund@hpe.com' },
    { name = 'Michael Jendrysik', email = 'michael.jendrysik@hpe.com' },
    { name = 'Mitch Harding', email = 'mitchell.harding@hpe.com' },
    { name = 'Mitchell Schooler', email = 'mitchell.schooler@hpe.com' },
    { name = 'Ryan Bak', email = 'ryan.bak@hpe.com' },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
description = 'Cray management and workflow tool'
dependencies = [
    # DO NOT UPDATE the below boto3 and botocore - Breaks cray artifacts bucket list
    'boto3<1.24',
    'botocore<1.27',
    # DO NOT UPDATE the above boto3 and botocore - Breaks cray artifacts bucket list
    # DO NOT UPDATE the below urllib3 - Breaks cray artifacts list <bucket> pagination
    # https://github.com/boto/botocore/issues/2926
    'urllib3>=1.25.4,<2.1',
    # DO NOT UPDATE the above urllib3 - Breaks cray artifacts list <bucket> pagination
    'click==7.1.2',
    'oauthlib~=3.2',
    'requests-oauthlib~=1.3',
    'requests-toolbelt~=1.0',
    'requests~=2.31.0',
    'ruamel.yaml~=0.17',
    'six~=1.16',
    'toml~=0.10',
    'websocket-client~=1.4',
]
dynamic = ['entry-points', 'scripts', 'version']
maintainers = [
    { name = 'Eric Lund', email = 'eric.lund@hpe.com' },
    { name = 'Russell Bunch', email = 'doomslayer@hpe.com'},
]
requires-python = '>=3.9'

[metadata]
url = 'https://github.com/Cray-HPE/craycli'

license = { file = 'LICENSE' }

[project.optional-dependencies]
ci = [
    'nox~=2023.4.22',
]
docs = [
    'recommonmark~=0.7.1',
    'sphinx~=7.0.1',
    'sphinx-click~=4.4.0',
    'sphinx-markdown-builder~=0.5.5',
]
lint = [
    'pylint~=2.15',
]
test = [
    'mock~=5.0.1',
    'names~=0.3.0',
    'pytest~=7.3.1',
    'pytest-cov~=4.1.0',
    'requests-mock~=1.10.0',
]

# Defines which folders belong to our package.
[tool.setuptools.packages.find]
include = ['cray*']
exclude = ['cray.tests*']

[tool.setuptools.dynamic]
entry-points = { file = ['entry_points.ini'] }
readme = { file = ['README.md'], content-type = 'text/markdown' }

# Allows for dynamic versioning via git-tag.
[tool.setuptools_scm]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools ~= 66.0',
    'setuptools_scm[toml] ~= 7.1.0',
    'wheel ~= 0.38.4',
]

[tool.distutils.bdist_wheel]
universal = false # This app. is not compatible with Python2.
